@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-1.1
-Date: 2009-11-07
+Version: 0.5-1.2
+Date: 2009-11-12
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0)
